--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
