testing for LinkedIn

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^3.2.1",
     "react-linkedin-login": "^1.0.4",
+    "react-linkedin-sdk": "^1.0.12",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "redux": "^4.0.1",
