--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-big-calendar": "^0.20.1",
     "react-dom": "^16.5.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^3.2.1",
